--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-layout: sidebar
-style: light
+layout: stacked
+style: dark
 
 plugins:
   - jekyll-octicons
@@ -28,23 +28,23 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
-  # behance: your_username
-  # dribbble: your_username
-  # facebook: your_username
-  # hackerrank: your_username
-  # instagram: your_username
-  # keybase: your_username
-  # linkedin: your_username
-  # mastodon: your_username
-  # medium: your_username
-  # stackoverflow: your_user_id
-  # telegram: your_username
-  # twitter: your_username
-  # unsplash: your_username
-  # vk: your_username
+social_media:
+  # behance: fzwael
+  # dribbble: fzwael
+  # facebook: fzwael
+  # hackerrank: fzwael
+  # instagram: fzwael
+  # keybase: fzwael
+  linkedin: fzwael
+  # mastodon: fzwael
+  medium: fzwael
+  stackoverflow: fzwael
+  # telegram: fzwael
+  # twitter: fzwael
+  # unsplash: fzwael
+  # vk: fzwael
   # website: http://your_website_url
-  # youtube: your_username
+  # youtube: fzwael
 
 topics:
   - name: CSS
