--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-layout: stacked
+layout: sidebar
 style: dark
 
 plugins:
@@ -18,10 +18,10 @@ defaults:
 
 projects:
   sort_by: pushed
-  # sort_by options:
+  sort_by options:
   #   - pushed
-  #   - stars
-  limit: 9
+    - stars
+  limit: 6
   exclude:
     archived: false
     forks: true
