--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ social_media:
   linkedin: fzwael
   # mastodon: fzwael
   medium: fzwael
-  stackoverflow: fzwael
+  stackoverflow: 5932738
   # telegram: fzwael
-  # twitter: fzwael
+  twitter: fzwael
   # unsplash: fzwael
   # vk: fzwael
   # website: http://your_website_url
