--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,12 @@ defaults:
 
 projects:
   sort_by: pushed
-  sort_by options: stars
+  sort_by options: 
+    - stars
   #   - pushed
-  limit: 6
+  limit: 4
   exclude:
-    archived: false
+    archived: true
     forks: true
     projects:
     # - repo-name
